fixed filter not showing up

--- a/src/styles/collection/collection-filter-mobile.scss
+++ b/src/styles/collection/collection-filter-mobile.scss
@@ -34,7 +34,7 @@
   }
   .filter-menu-container{
     .mobile-filter-trigger{
-      display: inline-flex;
+      @include inline-flex();
       min-width: 120px;
     }
     #filter-menu{
